--- a/Organizer/templates/organizer/dashboard.html
+++ b/Organizer/templates/organizer/dashboard.html
@@ -8,39 +8,7 @@
 
 {% block content %}
     <h2>Dashboard</h2>
-    {% for client in clients %}
-        <div class="row col-sm-12">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title">{{ client.name }}</h3>
-                </div>
-            </div>
-        </div>
-        {% for project in client.filtered_projects %}
-            <div class="row col-sm-4">
-                <div class="panel panel-secondary">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">{{ project.name }}</h3>
-                    </div>
-                    <div class="panel-body">
-                        {% for task in project.filtered_tasks %}
-                            <div class="row">
-                                <div class="col-sm-10 {% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
-                                    <a href="{% url "tasks.edit" pk=task.pk %}">{{ task.title }}</a>
-                                </div>
-                                <div class="col-sm-1">
-                                    <a href="{% url "tasks.delete" pk=task.pk %}"><img src="{% static "images/cancel_15.png" %}" /></a>
-                                </div>
-                            </div>
-                        {% endfor %}
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <a href="{% url "tasks.create" %}">Create New Task...</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-    {% endfor %}
+    {% autoescape off %}
+    {{ dashboard.render_panels }}
+    {% endautoescape %}
 {% endblock %}
