--- a/Organizer/templates/organizer/dashboard/panels/unclassified_tasks.html
+++ b/Organizer/templates/organizer/dashboard/panels/unclassified_tasks.html
@@ -6,22 +6,26 @@
         </div>
         <div class="panel-body">
             {% if tasks %}
-                {% for task in tasks %}
-                    <div class="row {% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
-                        <div class="col-sm-9">
-                            <a href="{% url "tasks.edit" pk=task.pk %}">{{ task.title }}</a>
-                        </div>
-                        <div class="col-sm-1">
-                            {{ task.project.client }}
-                        </div>
-                        <div class="col-sm-1">
-                            {{ task.project }}
-                        </div>
-                        <div class="col-sm-1">
-                            <a href="{% url "tasks.delete" pk=task.pk %}"><img src="{% static "images/cancel_15.png" %}" /></a>
-                        </div>
-                    </div>
-                {% endfor %}
+                <table class="table table-striped table-condensed">
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Client</th>
+                            <th>Project</th>
+                            <th>&nbsp;</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for task in tasks %}
+                        <tr>
+                            <td><a href="{% url "tasks.edit" pk=task.pk %}">{{ task.title }}</a></td>
+                            <td>{{ task.project.client }}</td>
+                            <td>{{ task.project }}</td>
+                            <td><a href="{% url "dashboard.tasks.delete" pk=task.pk %}"><img src="{% static "images/cancel_15.png" %}" /></a></td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
             {% elif display_if_empty %}
                 {{ empty_display_text }}
             {% endif %}
