--- a/Theme/static/css/theme.css
+++ b/Theme/static/css/theme.css
@@ -7,6 +7,8 @@ body {
 /*a:hover { color: #428bca; }*/
 a { color: #4dbfb6; }
 a:hover { color: #4dbfb6; }
+table a:not(.btn), .table a:not(.btn) { text-decoration: none; }
+table.table thead tr th { border-bottom: 2px solid #ddd; }
 
 .navbar-default .navbar-brand:hover { color: #428bca; }
 .navbar-default .navbar-nav > li > a:hover { color: #428bca; }
