--- a/Organizer/templates/organizer/dashboard.html
+++ b/Organizer/templates/organizer/dashboard.html
@@ -4,7 +4,7 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block js %}<script src="{% static "organizer/js/dashboard.js" %}"></script>{% endblock %}
-{% block css %}<link rel="stylesheet" type="text/css" href="{% static "organizer/js/dashboard.js" %}" />{% endblock %}
+{% block css %}<link rel="stylesheet" type="text/css" href="{% static "organizer/css/dashboard.css" %}" />{% endblock %}
 
 {% block content %}
     <h2>Dashboard</h2>
